DevAfrica in association yogam this 1/07/2024

--- a/nouveau dossier/src/index.css
+++ b/nouveau dossier/src/index.css
@@ -68,6 +68,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 10px;
 }
 
 .activite-img-taille {
